ADD: One-Shot message endpoint
